--- a/contact.html
+++ b/contact.html
@@ -202,7 +202,7 @@
         <script src="js/shuffle.js"></script>
         <script src="js/slick.js"></script>
         <script src="js/gmaps.js"></script>
-        <script> src= <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58956.926649274785!2d72.9035341669422!3d22.548867153918575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e4e7efd0c8885%3A0xa9a0b93c0c4b5215!2sAnand%2C%20Gujarat!5e0!3m2!1sen!2sin!4v1724927981863!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> </script>
+        <script src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58956.926649274785!2d72.9035341669422!3d22.548867153918575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e4e7efd0c8885%3A0xa9a0b93c0c4b5215!2sAnand%2C%20Gujarat!5e0!3m2!1sen!2sin!4v1724927981863!5m2!1sen!2sin"> </script>
        <!-- <script src="https://maps.google.com/maps/api/js?key=AIzaSyCysDHE3s4Qw3nTh9o58-2mJcqvR6HV8Kk"></script> -->
         <script src="js/owl.carousel.js"></script>
         <script src="js/theme.js"></script>
