--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
                             <img src="images/logo1.png" alt=""/>
                             <p></p>
                             <p>info@quanten.in</p>
+                            <p>Anand, Gujarat, India</p>
                         </aside>
                     </div>
                     <div>
