--- a/service_details.html
+++ b/service_details.html
@@ -189,6 +189,7 @@ In conclusion, cloud computing has had a significant impact on supply chain mana
                             <img src="images/logo1.png" alt=""/>
                             <p></p>
                             <p>info@quanten.in</p>
+                            <p>Anand, Gujarat, India</p>
                         </aside>
                     </div>
                     <div class="col-lg-4 col-md-6">
