--- a/about.html
+++ b/about.html
@@ -320,6 +320,7 @@
                             <img src="images/logo1.png" alt=""/>
                             <p></p>
                             <p>info@quanten.in</p>
+                            <p>Anand, Gujarat, India</p>
                         </aside>
                     </div>
                     <div class="col-lg-4 col-md-6">
