--- a/contact.html
+++ b/contact.html
@@ -137,6 +137,7 @@
                             <img src="images/logo1.png" alt=""/>
                             <p></p>
                             <p>info@quanten.in</p>
+                            <p>Anand, Gujarat, India</p>
                         </aside>
                     </div>
                     <div>
