--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" type="text/css" href="css/responsive.css"/>
         <!-- Favicon Icon -->
         <link rel="icon"  type="image/png" href="images/favicon.png">
+        <meta name='impact-site-verification' value='a0dfd9e9-bb9e-4c14-a9f7-53b2854fa4e5' />
     </head>
     <body>
         <!-- Preloading 
