--- a/portfolio_detail.html
+++ b/portfolio_detail.html
@@ -252,31 +252,34 @@
         <footer class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-3 col-md-6">
                         <aside class="widget about_widgets">
-                            <img src="images/logo.png" alt=""/>
-                            <p>88 694 895 684</p>
-                            <p>88 487 983 576</p>
-                            <p>loanplus@gmail.com</p>
+                            <img src="images/logo1.png" alt=""/>
+                            <p></p>
+                            <p>info@quanten.in</p>
+                            <p>Anand, Gujarat, India</p>
                         </aside>
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div>
+                        <aside></aside>
+                    </div>
+                    <div class="col-lg-4 col-md-3">
                         <aside class="widget recent_posts">
                             <div class="singleLPost">
-                                <h4><a href="#">What should you need do to get personal loan ver easay.</a></h4>
-                                <span>20 days ago</span>
+                                <h4><a href="#">how cloud technology is transforming the manufacturing industry.</a></h4>
+                                <span> </span>
                                 <p>
                                     Many modern alternatives often eumen incorpo
                                     other content actually detracts from...
                                 </p>
                             </div>
                             <div class="singleLPost">
-                                <h4><a href="#">What should you need do to get personal loan ver easay.</a></h4>
-                                <span>20 days ago</span>
+                                <h4><a href="#">leveraging cloud technology to improve manufacturing efficiency</a></h4>
+                                <span> </span>
                                 <p>
-                                    Many modern alternatives often eumen incorpo
-                                    other content actually detracts from...
-                                </p>
+                                    Cloud technology can also be used to reduce costs. By leveraging cloud-based
+                                    applications, manufacturers can access data from multiple sources, allowing
+                                    them to identify areas of waste and inefficiency.                                </p>
                             </div>
                         </aside>
                     </div>
@@ -300,7 +303,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <p>Copyright <a href="#">Payloan</a>. All rights reserved</p>
+                        <p>Home <a href="#">Quanten Technology</a>. </p>
                     </div>
                     <div class="col-sm-6 text-right">
                         <a href="#" id="backTo"><i class="flaticon-chevron"></i></a>
