--- a/portfolio_detail.html
+++ b/portfolio_detail.html
@@ -24,7 +24,7 @@
         <link rel="icon"  type="image/png" href="images/favicon.png">
     </head>
     <body class="bg_right">
-        <!-- Preloading -->
+         <!-- Preloading 
         <div class="preloader text-center">
             <div class="la-ball-circus la-2x">
                 <div></div>
@@ -34,9 +34,8 @@
                 <div></div>
             </div>
         </div>
-        <!-- Preloading -->
+       Preloading -->
 
-        <!-- Header section -->
         <header class="header_1" id="header">
             <div class="container">
                 <div class="row align-items-center">
@@ -54,66 +53,23 @@
                             </a>
                             <ul>
                                 <li class="menu-item-has-children">
-                                    <a href="#">home</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="index.html">Home 01</a></li>
-                                        <li><a href="index2.html">Home 02</a></li>
-                                    </ul>
+                                    <a href="index.html">home</a>
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="#">Services</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="services.html">Service 01</a></li>
-                                        <li><a href="services2.html">Service 02</a></li>
-                                        <li><a href="service_details.html">Service Details</a></li>
-                                    </ul>
+                                    <a href="service_details.html">Services</a>
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="#">Pages</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="404.html">404 Page</a></li>
-                                        <li><a href="faq.html">Faq Page</a></li>
-                                        <li class="menu-item-has-children">
-                                            <a href="#">Portfolio</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="portfolio.html">Portfolio</a></li>
-                                                <li><a href="portfolio_detail.html">Portfolio Details</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="menu-item-has-children">
-                                            <a href="#">Testimonial</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="testimonial.html">Testimonial 01</a></li>
-                                                <li><a href="testimonial2.html">Testimonial 02</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="team.html">Team Member</a></li>
-                                        <li><a href="application_form.html">Application Form</a></li>
-                                        <li><a href="loan_calculation.html">Loan Calculation</a></li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item-has-children">
-                                    <a href="#">Blog</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="blog.html">Blog Page</a></li>
-                                        <li><a href="single_blog.html">Blog Details</a></li>
-                                    </ul>
+                                    <a href="about.html">About</a>
                                 </li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </nav>
                     </div>
-                    <div class="col-lg-2 col-md-2 hidden-xs">
-                        <div class="navigator_btn btn_bg text-right">
-                            <a class="common_btn" href="#">Apply Now</a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </header>
         <!-- Header section -->
-
+        
         <!-- Page Banner -->
         <section class="pagebanner">
             <div class="container">
